--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,13 @@
 <!--#set var="title" value="Create Cool Slider" -->
 <!--#include virtual="/parts/header.html" -->
 
-Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Лучше рыбными точках злых букв вдали необходимыми семантика что предупреждал, коварный подпоясал которой ему толку ручеек все безорфографичный жизни последний!
+<header class="home-header">
+	<div class="top-line">
+		<a href="#" class="logo">111</a>
+		<div class="top-line__decoration">222</div>
+		<div class="top-line__contacts">333</div>
+		<div class="top-line__decoration">555</div>
+		<div class="menu-button-container">444</div>
+	</div>
+</header>
 <!--#include virtual="/parts/footer.html" -->
