--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,24 @@
 
 <header class="home-header">
 	<div class="top-line">
-		<a href="#" class="logo">111</a>
-		<div class="top-line__decoration">222</div>
-		<div class="top-line__contacts">333</div>
-		<div class="top-line__decoration">555</div>
-		<div class="menu-button-container">444</div>
+		<a href="#" class="logo">
+			<span class="logo__img-wrapper">
+				<img src="images/dist/logo.svg" alt="Вездеход" class="logo__images">
+			</span>
+			<span class="logo_text">Вездеход</span>
+		</a>
+		<div class="top-line__decoration"></div>
+		<div class="top-line__contacts">
+			Телефон: <span class="top-line__numbers">555-65-34</span> 
+			<span class="top-line__separator"></span>
+			<span class="top-line__address">Адрес:
+				<span class="top-line__text">ул. Московская, 35</span>
+			</span>
+		</div>
+		<div class="top-line__decoration"></div>
+		<div class="menu-button-container">
+			<a href="#" class="menu-button"></a>
+		</div>
 	</div>
 </header>
 <!--#include virtual="/parts/footer.html" -->
