--- a/app/index.html
+++ b/app/index.html
@@ -22,5 +22,19 @@
 			<a href="#" class="menu-button"></a>
 		</div>
 	</div>
+
+	<div class="home-header__content">
+		<div class="home-aside">
+			<div class="home-aside__decoration"></div>
+			<div class="home-aside_soc">
+				<div class="home-aside__soc-items">
+					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
+					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
+					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
+				</div>
+			</div>
+			<div class="home-aside__share-icon"></div>
+		</div>
+	</div>
 </header>
 <!--#include virtual="/parts/footer.html" -->
