step 3: slider container begin

--- a/app/index.html
+++ b/app/index.html
@@ -24,17 +24,39 @@
 	</div>
 
 	<div class="home-header__content">
-		<div class="home-aside">
+		<aside class="home-aside">
 			<div class="home-aside__decoration"></div>
 			<div class="home-aside_soc">
 				<div class="home-aside__soc-items">
 					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
-					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
-					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
+					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/vk-brands.svg" alt="Vkontacte"></a>
+					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/facebook-f-brands.svg" alt="Facebook"></a>
+					<a href="#" class="soc-item" target="_blank"><img src="images/dist/soc/twitter-brands.svg" alt="Twitter"></a>
 				</div>
 			</div>
 			<div class="home-aside__share-icon"></div>
+		</aside>
+
+		<div class="slider-container">
+
+			asadf
+
+			<div class="slider-bottom">
+
+				<div class="slider-share">
+					<div class="slider-share__items">
+						<a href="#" class="soc-item slider-share__item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
+						<a href="#" class="soc-item slider-share__item" target="_blank"><img src="images/dist/soc/vk-brands.svg" alt="Vkontacte"></a>
+						<a href="#" class="soc-item slider-share__item" target="_blank"><img src="images/dist/soc/facebook-f-brands.svg" alt="Facebook"></a>
+					</div>
+				</div>
+				<div class="slider-pagination">222</div>
+				<div class="slider-scrollbar">333</div>
+				<div class="slider-navigation">444</div>
+			</div>
+
 		</div>
+
 	</div>
 </header>
 <!--#include virtual="/parts/footer.html" -->
