--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,23 @@
 		</aside>
 
 		<div class="slider-container">
+			<div class="slider-img">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide slider-img__slide">
+						<div class="slider-img__bg" data-swiper-parallax="20%" style="background-image: url(images/dist/slide-images/1.jpg);">
+						</div>
+					</div>
+					<div class="swiper-slide slider-img__slide">
+						<div class="slider-img__bg" data-swiper-parallax="20%" style="background-image: url(images/dist/slide-images/2.jpg);">
+						</div>
+					</div>
+					<div class="swiper-slide slider-img__slide">
+						<div class="slider-img__bg" data-swiper-parallax="20%" style="background-image: url(images/dist/slide-images/3.jpg);">
+						</div>
+					</div>
+				</div>
 
-			asadf
+			</div>
 
 			<div class="slider-bottom">
 
