--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,35 @@
 		</aside>
 
 		<div class="slider-container">
+
+			<div class="slider-text">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide slider-text__slide">
+						<div class="slider-text__content">
+							<h2 class="slider-text__headig">Подбор внедорожника <span>на любой</span> случай</h2>
+							<p class="slider-text__desc">Выберем и подберём для вас любой внедорожник в кратчайшие сроки, с учётом всех ваших пожеланий и всех необходимых потребностей.</p>
+							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+						</div>
+					</div>
+					<div class="swiper-slide slider-text__slide">
+						<div class="slider-text__content">
+							<h2 class="slider-text__headig">Индивидуальный подход <span>к каждому</span> покупателю</h2>
+							<p class="slider-text__desc">Все автомобили мы подбираем индивидуально для каждого клиента или покупателя и с трепетом относимся к результату нашей работы.</p>
+							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+						</div>
+					</div>
+					<div class="swiper-slide slider-text__slide">
+						<div class="slider-text__content">
+							<h2 class="slider-text__headig">Выбор лучшей модели <span>из модельного</span> ряда</h2>
+							<p class="slider-text__desc">В нашем модельном ряду имеются модели сотен различных внедорожников, которые удовлетворят даже самого требовательного клиента.</p>
+							<button class="button slider-text__button"><span>Оставить заявку</span></button>
+						</div>
+					</div>
+				</div>
+
+
+			</div>
+
 			<div class="slider-img">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide slider-img__slide">
