--- a/app/index.html
+++ b/app/index.html
@@ -63,8 +63,6 @@
 						</div>
 					</div>
 				</div>
-
-
 			</div>
 
 			<div class="slider-img">
@@ -94,13 +92,20 @@
 						<a href="#" class="soc-item slider-share__item" target="_blank"><img src="images/dist/soc/facebook-f-brands.svg" alt="Facebook"></a>
 					</div>
 				</div>
-				<div class="slider-pagination">222</div>
-				<div class="slider-scrollbar">333</div>
-				<div class="slider-navigation">444</div>
+				<div class="slider-pagination">
+					<div class="swiper-pagination"></div>
+				</div>
+				<div class="slider-scrollbar">
+					<div class="swiper-scrollbar"></div>
+				</div>
+				<div class="slider-navigation">
+					<div class="slider-vaigation__container">
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
+					</div>
+				</div>
 			</div>
-
 		</div>
-
 	</div>
 </header>
 <!--#include virtual="/parts/footer.html" -->
