Step 7: pagination cout begin

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,6 @@
 			</div>
 
 			<div class="slider-bottom">
-
 				<div class="slider-share">
 					<div class="slider-share__items">
 						<a href="#" class="soc-item slider-share__item" target="_blank"><img src="images/dist/soc/instagram-brands.svg" alt="Instagram"></a>
@@ -104,6 +103,16 @@
 						<div class="swiper-button-next"></div>
 					</div>
 				</div>
+			</div>
+
+			<div class="slider-pagination-count">
+				<span class="current">01</span> / <span class="total">05</span>
+			</div>
+
+			<div class="slider-pagination-current">01<span class="slider-pagination-current__dot">.</span></div>
+
+			<div class="slider-gear">
+
 			</div>
 		</div>
 	</div>
