--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 			<span class="logo__img-wrapper">
 				<img src="images/dist/logo.svg" alt="Вездеход" class="logo__images">
 			</span>
-			<span class="logo_text">Вездеход</span>
+			<span class="logo__text">Вездеход</span>
 		</a>
 		<div class="top-line__decoration"></div>
 		<div class="top-line__contacts">
@@ -43,21 +43,21 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide slider-text__slide">
 						<div class="slider-text__content">
-							<h2 class="slider-text__headig">Подбор внедорожника <span>на любой</span> случай</h2>
+							<h2 class="slider-text__heading">Подбор внедорожника <span>на любой</span> случай</h2>
 							<p class="slider-text__desc">Выберем и подберём для вас любой внедорожник в кратчайшие сроки, с учётом всех ваших пожеланий и всех необходимых потребностей.</p>
 							<button data-micromodal-open="modal-1" class="button slider-text__button"><span>Оставить заявку</span></button>
 						</div>
 					</div>
 					<div class="swiper-slide slider-text__slide">
 						<div class="slider-text__content">
-							<h2 class="slider-text__headig">Индивидуальный подход <span>к каждому</span> покупателю</h2>
+							<h2 class="slider-text__heading">Индивидуальный подход <span>к каждому</span> покупателю</h2>
 							<p class="slider-text__desc">Все автомобили мы подбираем индивидуально для каждого клиента или покупателя и с трепетом относимся к результату нашей работы.</p>
 							<button data-micromodal-open="modal-1" class="button slider-text__button"><span>Оставить заявку</span></button>
 						</div>
 					</div>
 					<div class="swiper-slide slider-text__slide">
 						<div class="slider-text__content">
-							<h2 class="slider-text__headig">Выбор лучшей модели <span>из модельного</span> ряда</h2>
+							<h2 class="slider-text__heading">Выбор лучшей модели <span>из модельного</span> ряда</h2>
 							<p class="slider-text__desc">В нашем модельном ряду имеются модели сотен различных внедорожников, которые удовлетворят даже самого требовательного клиента.</p>
 							<button data-micromodal-open="modal-1" class="button slider-text__button"><span>Оставить заявку</span></button>
 						</div>
